fix: handle text overflow

--- a/src/css/vote.css
+++ b/src/css/vote.css
@@ -6,7 +6,6 @@
   width: 100%;
   display: flex;
   align-items: center;
-  height: 80px;
   border-bottom: 1px solid var(--toslide-gray);
 }
 
@@ -30,6 +29,10 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+.message-content:hover {
+  white-space: normal;
+  overflow: visible;
 }
 
 .message-vote-container {
